refactor/check_output14.txt
cargo :     Checking citybound_native v0.10.0 (C:\Users\Fa\Desktop\IAF\citybound\refactor)
En línea: 1 Carácter: 58
+ ... ers\Fa\Desktop\IAF\citybound\refactor; cargo check --lib 2>&1 | Out-F ...
+                                            ~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking ci...bound\refactor):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused attribute
   --> src\render_cache.rs:113:5
    |
113 |     #[inline]
    |     ^^^^^^^^^ help: remove this attribute
    |
note: attribute also specified here
   --> src\render_cache.rs:112:5
    |
112 |     #[inline]
    |     ^^^^^^^^^
    = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
    = note: `#[warn(unused_attributes)]` (part of `#[warn(unused)]`) on by default

error[E0004]: non-exhaustive patterns: `BuildingType::School` and `BuildingType::Police` not covered
   --> src\render.rs:665:11
    |
665 |     match btype {
    |           ^^^^^ patterns `BuildingType::School` and `BuildingType::Police` not covered
    |
note: `BuildingType` defined here
   --> src\ecs.rs:80:10
    |
 80 | pub enum BuildingType { 
    |          ^^^^^^^^^^^^
 81 |     House, Apartment, Shop, Office, Factory, Farm,
 82 |     Hospital, School, Police,  // [FASE 7]
    |               ------  ------ not covered
    |               |
    |               not covered
    = note: the matched value is of type `BuildingType`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as 
shown, or multiple match arms
    |
672 ~         BuildingType::Hospital => COLOR_BUILDING_HOSPITAL,
673 ~         BuildingType::School | BuildingType::Police => todo!(),
    |

For more information about this error, try `rustc --explain E0004`.
warning: `citybound_native` (lib) generated 1 warning
error: could not compile `citybound_native` (lib) due to 1 previous error; 1 warning emitted
